--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
     </header>
 <main id="main">
 
-  <div class="block">
+  <div class="block" tabindex="0">
     <h2>Craft a Resume that Tells Your Story</h2>
     <p>
       Your resume is often your first impression - an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether youe starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
@@ -38,14 +38,14 @@
       UMSI students are in high demand, and a clear, well-organized resume will help you stand out among applicants. On this page, you'll find practical tips, templates, and guidese all tailored to the needs of School of Information students and aligned with employer expectations.
     </p>
     <p>
-      Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your materials.
+      Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach">meet with a CDO Career Coach</a> to review your materials.
     </p>
   </div>
   <img src="images/campus_leaves.jpg" alt="Person riding a bike on an autumnal umich campus">
   <div class="block">
     <h2>Resume Writing Made Easy: Steps to Success</h2>
     <ol>
-      <li>Download a UMSI-Approved Template: Start with a format that worksno need to design from scratch.</li>
+      <li>Download a UMSI-Approved Template: Start with a format that works, no need to design from scratch.</li>
       <li>Gather Your Experiences: List jobs, internships, volunteer roles, coursework, and projects most relevant to your goals.</li>
       <li>Write Impactful Bullets: Use action verbs and highlight your skills, results, and unique contributions.</li>
       <li>Tailor for Each Opportunity: Customize your resume for every job or internship you pursue.</li>
