--- a/career_exploration.html
+++ b/career_exploration.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header>
-        <nav>
-          <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
-          <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
-          <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html">Networking</a></li>
-                <li><a href = "career_exploration.html">Careers</a></li>
-            </ul>
-        </nav>
+                <nav>
+                    <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
+                    <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
+                    <ul>
+                                <li><a href = "index.html">Home</a></li>
+                                <li><a href = "resume.html">Resumes</a></li>
+                                <li><a href = "networking.html">Networking</a></li>
+                                <li><a href = "career_exploration.html" class="active">Careers</a></li>
+                        </ul>
+                </nav>
         <div class="header-content">
             <h1>Career Exploration</h1>
             <p>Your guide to exploring career paths and opportunities at UMSI</p>
