--- a/networking.html
+++ b/networking.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html">Networking</a></li>
+                <li><a href = "networking.html" class="active">Networking</a></li>
                 <li><a href = "career_exploration.html">Careers</a></li>
             </ul>
         </nav>
@@ -34,26 +34,22 @@
                 Networking is a powerful tool for personal and professional growth. It goes beyond simply exchanging contact informationit's about cultivating meaningful relationships that can lead to new opportunities, collaborations, and lifelong learning.
             </p>
             <img src="images/UMSI_LeinweberExterior_04082025_01.webp" alt="UMSI Building">
-            <div class="benefits-grid">
-                <div class="benefit-card">
+            <div class="benefits-grid grid">
+                <div class="benefit-card card">
                     <h3>Career Advancement</h3>
                     <p>Many job openings are filled through referrals and personal connections, making networking crucial for discovering hidden opportunities.</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card card">
                     <h3>Knowledge Sharing</h3>
                     <p>Engaging with others allows you to gain insights into industry trends, best practices, and emerging technologies.</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card card">
                     <h3>Support System</h3>
                     <p>A strong network offers encouragement, advice, and resources during career transitions, challenges, or when exploring new paths.</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card card">
                     <h3>Collaboration</h3>
                     <p>Connections can lead to joint projects, research partnerships, and innovative solutions to complex problems.</p>
-                </div>
-                <div class="benefit-card">
-                    <h3>Mentorship</h3>
-                    <p>Networking helps you find mentors who can provide guidance, share experiences, and help you navigate your career journey.</p>
                 </div>
             </div>
 
