--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
           <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
           <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li><a href = "index.html" class="active">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
                 <li><a href = "career_exploration.html">Careers</a></li>
@@ -50,15 +50,30 @@
         <li id="benefit-6">Regularly Updated: We keep the content fresh and relevant, so you always have access to the latest tools and information.</li>
       </ul>
     </div>
-      <div class="cdo_4_resources">
+      <div class="cdo_4_resources card-group">
         <h2>Get Started with UMSI Career Development</h2>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the diag.">
-        <ul>
-            <li><a href="resume.html">Resumes</a></li>
-            <li><a href="networking.html">Networking & Connections</a></li>
-            <li><a href="career_exploration.html">Career Exploration</a></li>
-            <li><a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach">Talk to a Career Coach</a></li>
-        </ul>
+        <div class="grid cdo-grid">
+          <a class="card" href="resume.html">
+            <img src="images/resumeicon.svg" alt="Resume icon">
+            <h3>Resumes</h3>
+            <p>Templates, tips, and appointment info.</p>
+          </a>
+          <a class="card" href="networking.html">
+            <img src="images/networkicon.svg" alt="Networking icon">
+            <h3>Networking</h3>
+            <p>Build connections and find mentors.</p>
+          </a>
+          <a class="card" href="career_exploration.html">
+            <img src="images/search.svg" alt="Careers search icon">
+            <h3>Career Exploration</h3>
+            <p>Explore roles and industry paths.</p>
+          </a>
+          <a class="card" href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach" target="_blank">
+            <img src="images/headphones.svg" alt="Headphones icon">
+            <h3>Talk to a Coach</h3>
+            <p>Book a one-on-one review session.</p>
+          </a>
+        </div>
       </div>
       <div class="popular-resources">
         <h2>Most Popular Resources</h2>
