--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
           <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
           <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
+                <li><a href = "resume.html" class="active">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
                 <li><a href = "career_exploration.html">Careers</a></li>
             </ul>
