--- a/career_exploration.html
+++ b/career_exploration.html
@@ -67,7 +67,10 @@
         </div>
     </main>
     <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a>  &copy; Copyrights <span id="year"></span></p>
+        <script>
+            document.getElementById("year").textContent = new Date().getFullYear();
+        </script>
     </footer>
 </body>
 </html>
