--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
   <main id="main">
     <div class="intro">
       <div class="journey"><img src="images/start_your_journey.png" alt="Start Your Journey with UMSI Career Development"></div>
-      <h2>Your Central Hub for Career Success at UMSI</h2>
-      <p>
-        Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
-      </p>
+      <div class="index_block">
+        <h2>Your Central Hub for Career Success at UMSI</h2>
+        <p>
+          Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop
+          for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker.
+          Whether you are just starting your exploration or getting ready to launch your career, you will find everything you
+          need, organized for you.
+        </p>
+        <br>
+      </div>
       <div class="video-container">
         <iframe src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="Career Development Overview video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>This video introduces students to the UMSI Career Development Office and how to use its resources effectively.</p>
@@ -87,18 +93,21 @@
         </ul>
       </div>
 
-    <section>
+    <div class="block">
       <h2>Connect with the UMSI Career Development Office</h2>
       <p>
         The UMSI Career Development Office (CDO) offers personalized support through appointments, events, and resource guides. <a href="https://www.si.umich.edu/programs/career-development-office" target="_blank">Visit the CDO website</a> or <a href="https://umsi.umich.edu/about/locations" target="_blank">find us on campus</a> to learn more, schedule a coaching session, or just say hello.
       </p>
-    </section>
+    </div>
 
         <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
         UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
     </main>
     <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
-        </footer>
+        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a>  &copy; Copyrights <span id="year"></span></p>
+        <script>
+            document.getElementById("year").textContent = new Date().getFullYear();
+        </script>
+    </footer>
 </body>
 </html>
