--- a/networking.html
+++ b/networking.html
@@ -58,7 +58,7 @@
             </p>
         </div>
 
-        <div class="block">
+        <div class="block" id="building_network">
             <img src="images/UMSI_CareerFair.jpg" alt="UMSI Career Fair">
             <h2>Building Your Network</h2>
             <p>
@@ -66,7 +66,29 @@
             </p>
             <a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?usp=sharing" target="_blank">View Networking Opportunities Presentation</a>
         </div>
-
+            <ol class="olcards">
+		<li style="--cardColor:#9A3324">
+			<div class="content">
+				<div class="icon">😀</div>
+				<div class="title"><a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank">Networking Tips</a></div>
+				<div class="text">Practical advice on how to effectively network both in-person and online.</div>
+			</div>
+		</li>
+		<li style="--cardColor:#394D38">
+			<div class="content">
+				<div class="icon">😁</div>
+				<div class="title"><a href="https://www.si.umich.edu/about-umsi/events" target="_blank">UMSI Events Calendar</a></div>
+				<div class="text">Stay updated on upcoming networking events, workshops, and seminars hosted by UMSI.</div>
+			</div>
+		</li>
+		<li style="--cardColor:#162d59">
+			<div class="content">
+				<div class="icon">😉</div>
+				<div class="title"><a href="https://www.linkedin.com/school/university-of-michigan---school-of-information/" target="_blank">UMSI LinkedIn Page</a></div>
+				<div class="text">Join the UMSI community on LinkedIn to connect with peers, alumni, and industry professionals.</div>
+			</div>
+		</li>
+	</ol>
         <div class="block">
             <img src="images/networking.png" alt="Networking Illustration" class="illustration">
             <h2>Networking Tips</h2>
@@ -79,9 +101,9 @@
             </ul>
         </div>
 
-        <div class="block">
+        <!-- <div class="block" id="networking_arrows">
             <h2>Networking Resources</h2>
-            <ul>
+            <ol>
                 <li>
                     <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank">
                         Networking Tips
@@ -100,12 +122,15 @@
                     </a>
                     <div>Join the UMSI community on LinkedIn to connect with peers, alumni, and industry professionals.</div>
                 </li>
-            </ul>
-        </div>
-
+            </ol>
+        </div> -->
+            
     </main>
     <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a>  &copy; Copyrights <span id="year"></span></p>
+        <script>
+            document.getElementById("year").textContent = new Date().getFullYear();
+        </script>
     </footer>
 </body>
 </html>
